--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ strip = "symbols"
 Inflector = "0.11.4"
 bimap = "0.6.3"
 clap = { version = "4.5.14", features = ["derive"] }
+color-eyre = "0.6.3"
 csv = "1.3.0"
 image = { version = "0.24.9", default-features = false, features = [
     "png",
@@ -28,3 +29,5 @@ image = { version = "0.24.9", default-features = false, features = [
 rand = "0.8.5"
 rust-embed = { version = "8.5.0" }
 showie = "1.0.1"
+terminal_size = "0.3.0"
+thiserror = "1.0.61"
